--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 </header>
 <section class="hero">
   <div class="content">
-    <h1>¿Necesitas un viaje?</h1>
+    <h1>¿A donde quieres ir?</h1>
     <div class="buttons">
       <button class="reserve" onclick="showForm()">Reservar ahora</button>
       <button class="call" onclick="window.location.href='tel:+34644660046'">Llamar</button>
@@ -382,7 +382,7 @@
 
     var texts = {
     "es": {
-    "heroTitle": "¿Necesitas un viaje?",
+    "heroTitle": "¿A donde quieres ir?",
     "reserveButton": "Reservar ahora",
     "callButton": "Llamar",
     "taxiTitle1": "Taxi de 7 Plazas",
@@ -396,7 +396,7 @@
     "contactEmail": "Email"
   },
     "en": {
-    "heroTitle": "Need a ride?",
+    "heroTitle": "Where do you want to go?",
     "reserveButton": "Reserve Now",
     "callButton": "Call",
     "taxiTitle1": "7-Seater Taxi",
@@ -410,7 +410,7 @@
     "contactEmail": "Email"
   },
     "gl": {
-    "heroTitle": "Necesitas un viaxe?",
+    "heroTitle": "A onde precisas ir?",
     "reserveButton": "Reservar agora",
     "callButton": "Chamar",
     "taxiTitle1": "Taxi de 7 prazas",
